로그인 후 할 일 목록 표시되게 변경

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 <body>
   <template id="login-form">
     <form class="login-form">
-        <input type="text" name="username" id="">
-        <input type="password" name="password" id="">
+        <input type="text" name="username">
+        <input type="password" name="password">
         <button>로그인</button>
     </form>
   </template>
