--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
 
   <template id="todo-list">
     <h1>할 일 목록</h1>
+    <form class="todo-form">
+      <input type="text" name="body">
+      <button>등록</button>
+    </form>
     <ul class="todo-list"></ul>
   </template>
 
